terraform/modules/alb/sg-rules.tf
resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  description       = "Allow HTTP traffic from internet"
  security_group_id = var.alb_security_group_id
  from_port = 80
  to_port = 80
  ip_protocol = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
  tags = {
    resource = "vpc"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_https" {
  description       = "Allow HTTPS traffic from internet"
  security_group_id = var.alb_security_group_id
  from_port = 443
  to_port = 443
  ip_protocol = "tcp"
  cidr_ipv4 = "0.0.0.0/0"
    tags = {
    resource = "vpc"
  }
}

resource "aws_vpc_security_group_egress_rule" "alb_egress" {
  description       = "Allow all outbound traffic to internet"
  security_group_id = var.alb_security_group_id
  ip_protocol = "-1"
  cidr_ipv4 = "0.0.0.0/0"
    tags = {
    resource = "vpc"
  }
}
